--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap');
 
+/* Tags */
+
 * {
     box-sizing: border-box;
     font-family: Montserrat, "Open Sans", Helvetica, Roboto, Arial, sans-serif;
@@ -19,6 +21,16 @@ a {
     text-decoration: none;
     color: unset;
 }
+
+p {
+    margin: 0;
+}
+
+ul {
+    padding: 0;
+}
+
+/* UI and adaptive */
 
 .container {
     width: 970px;
@@ -42,6 +54,8 @@ a {
     font-size: 14px;
 }
 
+/* Gradients */
+
 .blue-text-gradient-background {
     background: linear-gradient(90deg, #16A7D8 0%, #1290B4 100%);
     width: fit-content;
@@ -57,6 +71,8 @@ a {
     background: linear-gradient(90deg, rgba(22, 167, 216, 0.2) 0%, rgba(18, 144, 180, 0.2) 100%);
     padding: 1px;
 }
+
+/* Headers and text */
 
 .h1 {
     font-size: 40px;
@@ -90,6 +106,8 @@ a {
     font-size: 14px;
     line-height: 122%;
 }
+
+/* Form */
 
 .form__wrapper {
     width: 440px;
@@ -294,9 +312,6 @@ a {
 
 .solution-card__info {
     color: #00131A;
-}
-
-.solution-card__info {
     margin: 8px 0 0;
 }
 
@@ -315,6 +330,7 @@ a {
 
 .profit__container {
     padding: 92px 0 50px;
+    margin-bottom: 182px;
 }
 
 .profit__list {
@@ -344,3 +360,90 @@ a {
     align-items: flex-start;
 }
 
+/* Stages */
+
+.stages__grid {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    margin: 56px 0 110px;
+}
+
+.stages__scale {
+    position: absolute;
+    top: 36px;
+    left: 489.5px;
+    height: calc(142px + 139px + 138px + 140px + 139px + 29px * 6);
+}
+
+.stages__row {
+    display: flex;
+    justify-content: flex-end;
+    height: 96px;
+    align-items: center;
+    width: 100%;
+}
+
+.stages__row:first-child {
+    margin-bottom: 75px;
+}
+
+.stages__row:nth-child(2) {
+    margin-bottom: 72px;
+}
+
+.stages__row:nth-child(3) {
+    margin-bottom: 71px;
+}
+
+.stages__row:nth-child(4) {
+    margin-bottom: 73px;
+}
+
+.stages__row:nth-child(5) {
+    margin-bottom: 72px;
+}
+
+.stage-item__description {
+    margin: 8px 0 0;
+}
+
+.stage-item {
+    display: flex;
+    align-items: center;
+}
+
+.stage-item__picture {
+    width: 96px;
+}
+
+.stages__row:nth-child(2n + 1) > .stage-item > .stage-item__picture {
+    margin: 0 40px 0 0;
+}
+
+.stages__row:nth-child(2n + 1) > .stage-item > .stage-item__text {
+    min-width: 200px;
+    max-width: 255px;
+}
+
+.stages__row:nth-child(2n + 1) > .stage-item {
+    margin-right: 533px;
+}
+
+.stages__row:nth-child(2n + 2) > .stage-item {
+    flex-direction: row-reverse;
+}
+
+.stages__row:nth-child(2n + 2) > .stage-item > .stage-item__picture {
+    margin: 0 0 0 40px;
+}
+
+.stages__row:nth-child(2n + 2) > .stage-item > .stage-item__text {
+    min-width: 245px;
+    max-width: 270px;
+}
+
+/* Couriers */
