--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ p {
 
 ul {
     padding: 0;
+    margin: 0;
 }
 
 /* UI and adaptive */
@@ -65,6 +66,7 @@ ul {
     background-color: white;
     margin: 0;
     mix-blend-mode: screen;
+    color: black;
 }
 
 .gradient-border-wrapper {
@@ -75,18 +77,28 @@ ul {
 /* Headers and text */
 
 .h1 {
+    margin: 0;
     font-size: 40px;
     line-height: 141%;
     letter-spacing: -0.015em;
 }
 
+.h2 {
+    margin: 0;
+    font-size: 30px;
+    line-height: 141%;
+    letter-spacing: -0.015em;
+}
+
 .h3 {
+    margin: 0;
     font-size: 24px;
     line-height: 100%;
     letter-spacing: -0.015em;
 }
 
 .h4 {
+    margin: 0;
     font-weight: 600;
     font-size: 20px;
     line-height: 141%;
@@ -94,6 +106,7 @@ ul {
 }
 
 .h5 {
+    margin: 0;
     font-weight: bold;
     font-size: 16px;
     line-height: 100%;
@@ -447,3 +460,52 @@ ul {
 }
 
 /* Couriers */
+
+.couriers {
+    background: linear-gradient(90deg, #16A7D8 0%, #1290B4 100%);
+    color: #FDFDFD;
+    padding: 56px 0 110px;
+}
+
+.couriers__header {
+    background: unset;
+    margin: 0 0 4px;
+}
+
+.couriers__howto {
+    display: grid;
+    grid-template-columns: 96px 1fr;
+    gap: 25px;
+    margin: 35px 0 0;
+}
+
+.howto__title {
+    margin: 0 0 16px;
+}
+
+.howto__text {
+    max-width: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.couriers__container:not(.couriers__container_advantages) {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 60px;
+}
+
+.advantages__list {
+    display: flex;
+    justify-content: space-between;
+    margin: 31px 0 0;
+}
+
+.advantages__list-item {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 120%;
+    max-width: 300px;
+}
