--- a/main.css
+++ b/main.css
@@ -1,6 +1,27 @@
-/* Common rules */
+/* Fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap');
+@font-face {
+    font-family: "Open Sans";
+    src: url("./fonts/OpenSans-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 400;
+    src: url("./fonts/Montserrat-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 600;
+    src: url("./fonts/Montserrat-SemiBold.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 700;
+    src: url("./fonts/Montserrat-Bold.ttf");
+}
 
 /* Tags */
 
@@ -163,6 +184,8 @@ ul {
     position: relative;
     box-shadow: 0 0 3px rgba(106, 157, 217, 0.15);
     border-radius: 6px;
+    height: fit-content;
+    width: 100%;
 }
 
 .form__input-label {
@@ -310,6 +333,8 @@ ul {
     background-color: #fff;
     padding: 32px 24px;
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .solution-card__image {
@@ -359,7 +384,7 @@ ul {
 }
 
 .profit__list-item_header::marker {
-    content: none;
+    content: "";
 }
 
 .profit__list-item:not(.profit__list-item_header) {
