--- a/main.css
+++ b/main.css
@@ -45,6 +45,8 @@ a {
 
 p {
     margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 ul {
@@ -79,6 +81,14 @@ ul {
 @media screen and (max-width: 1200px){
     .container {
         width: 720px;
+    }
+}
+
+@media screen and (max-width: 748px) {
+    .container {
+        width: 100%;
+        padding-left: 25px!important;
+        padding-right: 25px!important;
     }
 }
 
@@ -157,6 +167,16 @@ ul {
     }
 }
 
+@media screen and (max-width: 767px) {
+    .h1 {
+        font-size: 24px;
+    }
+
+    .h4 {
+        font-size: 18px;
+    }
+}
+
 /* Form */
 
 .form__wrapper {
@@ -231,6 +251,12 @@ ul {
     }
 }
 
+@media screen and (max-width: 768px) {
+    .form__wrapper {
+        width: 100%;
+    }
+}
+
 /* Header */
 
 .header {
@@ -302,6 +328,11 @@ ul {
     }
 }
 
+@media screen and (max-width: 767px) {
+    .navigation {
+        display: none;
+    }
+}
 /* Subheader */
 
 .subheader {
@@ -328,11 +359,11 @@ ul {
     width: 100%;
 }
 
-.wave_tablet, .wave_phone {
+.wave_tablet, .wave_mobile {
     display: none;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (min-width: 768px) and (max-width: 1200px){
     .phones-image {
         width: 320px;
     }
@@ -342,6 +373,44 @@ ul {
     }
 
     .wave:not(.wave_tablet) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .subheader__container {
+        z-index: 1;
+    }
+
+    .phones-image {
+        position: absolute;
+        opacity: 0.2;
+        z-index: 2;
+        margin: auto;
+        width: 90%;
+        left: 5vw;
+    }
+
+    .request__tagline {
+        text-align: center;
+    }
+
+    .request__button {
+        display: flex;
+        margin: auto;
+    }
+    .request {
+        padding: 150px 0;
+        z-index: 3;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .wave_mobile {
+        display: block;
+    }
+
+    .wave:not(.wave_mobile) {
         display: none;
     }
 }
@@ -380,6 +449,12 @@ ul {
         margin: 0;
         position: absolute;
         top: -63px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .partners {
+        margin-bottom: 64px;
     }
 }
 
@@ -427,12 +502,41 @@ ul {
     padding: 0 0 0 22.3px;
 }
 
+.solution-card__list-item {
+    font-family: "Open Sans", Montserrat, Helvetica, Roboto, Arial, sans-serif;
+}
+
+.solution-card__image-wrapper {
+    display: flex;
+    align-items: center;
+}
+
 @media screen and (max-width: 1200px){
     .solutions__grid {
         grid-template-columns: 465px;
         gap: 24px;
         margin: 40px auto 128px;
         width: fit-content;
+    }
+
+    .solution-card__info {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .solutions__grid {
+        grid-template-columns: 100%;
+        gap: 16px;
+        margin: 40px auto 64px;
+    }
+
+    .solution-card__info {
+        font-size: 12px;
+    }
+
+    .solution-card__image {
+        margin: calc((100% - 92.5px) / 2) 0;
     }
 }
 
@@ -486,6 +590,23 @@ ul {
 
     .profit__list-item {
         max-width: 225px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .profit {
+        background-position: -200px 50px;
+        background-size: 220%;
+        margin-bottom: 64px;
+    }
+    .profit__container {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .profit__list {
+        padding: 88px 0 40px;
     }
 }
 
@@ -607,6 +728,34 @@ ul {
     }
 }
 
+@media screen and (max-width: 768px){
+    .stages__scale {
+        left: -10px;
+    }
+
+    .stage-item {
+        margin-right: 0!important;
+        flex-direction: row!important;
+    }
+
+    .stages__grid {
+        margin: 35px 0 65px;
+    }
+
+    .stage-item__picture {
+        margin: 0!important;
+        margin-right: 17px!important;
+    }
+
+    .stages__row {
+        justify-content: flex-start;
+        margin-left: 27px;
+    }
+
+    .stage-item__description {
+        max-width: 170px;
+    }
+}
 /* Couriers */
 
 .couriers {
@@ -681,8 +830,28 @@ ul {
     }
 
     .advantages__list-item {
-        font-weight: 600px;
+        font-weight: 600;
         font-size: 12px;
         max-width: 205px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .couriers__container {
+        flex-direction: column;
+    }
+
+    .couriers__howto {
+        margin: 42px 0;
+    }
+
+    .advantages__list {
+        flex-direction: column;
+        margin: 31px 0 0;
+        padding-left: 27px;
+    }
+
+    .advantages__list-item:not(:last-child) {
+        margin-bottom: 32px;
     }
 }
