--- a/main.css
+++ b/main.css
@@ -197,6 +197,7 @@ ul {
     width: 440px;
     box-shadow: 0 0 16px rgba(30, 0, 175, 0.06), 0 0 3px rgba(22, 167, 216, 0.1);
     border-radius: 10px;
+    border: 1px solid rgba(18, 144, 180, 0.2);
 }
 
 .form {
@@ -232,10 +233,6 @@ ul {
 
 .form__input-wrapper {
     position: relative;
-    box-shadow: 0 0 3px rgba(106, 157, 217, 0.15);
-    border-radius: 6px;
-    height: 44px;
-    width: 100%;
 }
 
 .form__input-label {
@@ -244,11 +241,12 @@ ul {
 }
 
 .form__input {
-    width: 100%;
-    height: 42px;
-    border: none;
+    box-shadow: 0 0 3px rgba(106, 157, 217, 0.15);
+    border: 1px solid rgba(18, 144, 180, 0.2);
     padding: 14px 16px 13px 24px;
-    border-radius: 5px;
+    border-radius: 6px;
+    height: 44px;
+    width: 100%;
 }
 
 .form__button {
@@ -343,25 +341,24 @@ ul {
 }
 
 .navigation_mobile {
-    display: block;
-    width: 100%;
-    background-color: #fff;
-    padding: 72px 20px 40px 24px;
-    border-radius: 9px;
-    position: relative;
-}
-
-.gradient-border-wrapper_hidden {
-    display: none;
-}
-
-.navigation__wrapper {
     position: absolute;
     top: 0;
     right: 0;
     border-radius: 10px;
     z-index:5;
     width: 163px;
+    display: none;
+    background-color: #fff;
+    padding: 72px 20px 40px 24px;
+    border: 1px solid rgba(18, 144, 180, 0.2);
+}
+
+.navigation_visible {
+    display: block;
+}
+
+.gradient-border-wrapper_hidden {
+    display: none;
 }
 
 .navigation__cross {
@@ -404,7 +401,7 @@ ul {
 }
 
 @media screen and (max-width: 767px) {
-    .navigation:not(.navigation_mobile) {
+    .navigation:not(.navigation_visible) {
         display: none;
     }
 
@@ -583,7 +580,7 @@ ul {
 }
 
 .solution-card {
-    border-radius: 9px;
+    border-radius: 10px;
     background-color: #fff;
     padding: 32px 24px;
     display: grid;
@@ -591,6 +588,8 @@ ul {
     gap: 17px;
     width: 100%;
     height: 100%;
+    border: 1px solid rgba(18, 144, 180, 0.2);
+    box-shadow: 0 0 16px 0 rgba(22, 167, 216, 0.2);
 }
 
 .solution-card__text {
